--- a/index.html
+++ b/index.html
@@ -3,37 +3,45 @@
 <head>
 <title>Lehe päis</title>
 </head>
-<body>
+<link rel="stylesheet" href="style.css">
 
-<h1>Kassid!?</h1>
-<p>JAH just nii, oled õiges kohas!</p>
-<p>Yup</p>
-<a href="https://fi.wikipedia.org/wiki/Koira" target="_blank">Natuke kasulikku infot.</a>
-<br >
-<img src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_3x4.jpg" alt="This guy" width="400" height="400">
-<h2> Järgneb loetelu kassidest:</h2>
-<ul>
-    <li>Minu kass nimega Pikne</li>
-    <li>Garfield</li>
-    <li>ja paljud teised</li>
-  </ul>
-<table>
-    <tr>
-        <th>Nimi</th>
-        <th>Kass</th>
-        <th>Suurus</th>
-    </tr>
-    <tr>
-        <td>Pikne</td>
-        <td>Jah</td>
-        <td>Umbes kassi suurune</td>
-    </tr>
-    <tr>
-        <td>Garfield</td>
-        <td>Jah</td>
-        <td>Suht suur</td>
-    </tr>
-</table>
+<body>
+    <table width=100% height=100%><tr>
+    <td width=50%>
+        <h1>Kassid!?</h1>
+        <p>JAH just nii, oled õiges kohas!</p>
+        <p>Yup</p>
+        <a href="https://fi.wikipedia.org/wiki/Koira" target="_blank">Natuke kasulikku infot.</a>
+        <br >
+        <img id="border" src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_3x4.jpg" alt="This guy" width="400" height="400">
+        </td>
+    <td width=50%>
+        <h2> Järgneb loetelu kassidest:</h2>
+        <ul>
+            <li>Minu kass nimega Pikne</li>
+            <li>Garfield</li>
+            <li>ja paljud teised</li>
+        </ul>
+        <table>
+            <tr>
+                <th>Nimi</th>
+                <th>Kass</th>
+                <th>Suurus</th>
+            </tr>
+            <tr>
+                <td>Pikne</td>
+                <td>Jah</td>
+                <td>Umbes kassi suurune</td>
+            </tr>
+            <tr>
+                <td>Garfield</td>
+                <td>Jah</td>
+                <td>Suht suur</td>
+            </tr>
+        </table>
+    </td></tr></table>
+
+
 <a href="file:///Users/madismiikaelarro/Ylikool/Sissejuhatus/teine.html"> Veel huvitatud???? </a>
 
 </body>
